# ambient-test-project

./: .gitignore  Cargo.toml  ambient.toml
assets/: mecha.glb  pipeline.json
src/: client.rs  lib.rs  player_animation_controller.rs  player_animation_state.rs  server.rs
