[package]
name = "ambient_test_project"
edition = "2021"
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", branch = "main" }

[[bin]]
name = "client_ambient_test_project"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_ambient_test_project"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]
