[package]
name = "ambient_test_project"
edition = "2021"
version = "0.0.1"

[dependencies]
ambient_api = { path = "/Users/kevzettler/code/Ambient/guest/rust/api" }
# ambient_api = "0.2.1"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"

[[bin]]
name = "client_ambient_test_project"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_ambient_test_project"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]
